--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,16 +1,45 @@
-$grid-breakpoints: (
-    xs: 0,
-    sm: 576px,
-    md: 768px,
-    lg: 992px,
-    xl: 1200px,
-    xxl: 1400px
-);
 
-$container-max-widths: (
-    sm: 540px,
-    md: 720px,
-    lg: 960px,
-    xl: 1140px,
-    xxl: 1320px
-);
+// $blue: #0d6efd;
+// $indigo: #6610f2;
+// $purple: #6f42c1;
+// $pink: #d63384;
+// $red: #dc3545;
+// $orange: #fd7e14;
+// $yellow: #ffc107;
+// $green: #198754;
+// $teal: #20c997;
+// $cyan: #0dcaf0;
+
+// $colors: (
+//     "blue": $blue,
+//     "indigo": $indigo,
+//     "purple": $purple,
+//     "pink": $pink,
+//     "red": $red,
+//     "orange": $orange,
+//     "yellow": $yellow,
+//     "green": $green,
+//     "teal": $teal,
+//     "cyan": $cyan,
+//     "black": $black,
+//     "white": $white,
+//     "gray": $gray-600,
+//     "gray-dark": $gray-800
+// );
+
+// $grid-breakpoints: (
+//     xs: 0,
+//     sm: 576px,
+//     md: 768px,
+//     lg: 992px,
+//     xl: 1200px,
+//     xxl: 1400px
+// );
+
+// $container-max-widths: (
+//     sm: 540px,
+//     md: 720px,
+//     lg: 960px,
+//     xl: 1140px,
+//     xxl: 1320px
+// );
